# presence

./: .env  .gitlab-ci.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
app/migrations/models/: 0_20230831105614_init.py
app/repositories/: presence_history.py
app/routers/: presence_history.py
entry-point/: start.sh
